--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-streaming": "^1.8.0",
+    "csv-parser": "^2.3.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
